# deconto21-ais

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/deconto21_ais/: AssignFP.py  cli.py  deconto21_ais_postprocess.py  deconto21_ais_preprocess.py  deconto21_ais_project.py
