[project]
name = "deconto21-ais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.9.1",
    "h5py>=3.14.0",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
    "xarray>=2025.9.1",
]

[project.scripts]
deconto21-ais = "deconto21_ais.cli:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
